--- a/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj
+++ b/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{E87ADAF7-B67F-4DA3-B889-39F789DBFFE4}</ProjectGuid>
+    <ProjectGuid>{C099E324-18AF-4E95-9550-234D8C81609D}</ProjectGuid>
     <RootNamespace>CollisionEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,48 +127,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Testing\CollisionChecker.h" />
-    <ClInclude Include="Engine\Physics\CollisionDynamics.h" />
-    <ClInclude Include="Engine\Common.h" />
-    <ClInclude Include="Engine\Component.h" />
-    <ClInclude Include="Engine\Core.h" />
-    <ClInclude Include="Engine\Debug.h" />
-    <ClInclude Include="Engine\GameObject.h" />
-    <ClInclude Include="Engine\Graphics\Shader.h" />
-    <ClInclude Include="Engine\Graphics\Texture2D.h" />
-    <ClInclude Include="Engine\Graphics\Window.h" />
-    <ClInclude Include="Engine\Math\Bounds.h" />
-    <ClInclude Include="Engine\Physics\Body.h" />
-    <ClInclude Include="Engine\Physics\CircleCollider.h" />
-    <ClInclude Include="Engine\Physics\Collider.h" />
-    <ClInclude Include="Engine\Physics\PhysicsScene.h" />
-    <ClInclude Include="Engine\Physics\Transform.h" />
-    <ClInclude Include="Engine\Timer.h" />
-    <ClInclude Include="Testing\TestGame.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Testing\CollisionChecker.cpp" />
-    <ClCompile Include="Engine\Physics\CollisionDynamics.cpp" />
-    <ClCompile Include="Engine\Component.cpp" />
-    <ClCompile Include="Engine\Core.cpp" />
-    <ClCompile Include="Engine\Debug.cpp" />
-    <ClCompile Include="Engine\GameObject.cpp" />
-    <ClCompile Include="Engine\Graphics\Shader.cpp" />
-    <ClCompile Include="Engine\Graphics\Texture2D.cpp" />
-    <ClCompile Include="Engine\Graphics\Window.cpp" />
-    <ClCompile Include="Engine\Math\Bounds.cpp" />
+    <ClCompile Include="Engine\Core\Debug.cpp" />
+    <ClCompile Include="Engine\Core\Timer.cpp" />
+    <ClCompile Include="Engine\Core\Window.cpp" />
+    <ClCompile Include="Engine\Math\Vector2.cpp" />
     <ClCompile Include="Engine\Physics\Body.cpp" />
-    <ClCompile Include="Engine\Physics\CircleCollider.cpp" />
-    <ClCompile Include="Engine\Physics\Collider.cpp" />
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Engine\Physics\Bounds.cpp" />
+    <ClCompile Include="Engine\Physics\Circle.cpp" />
+    <ClCompile Include="Engine\Physics\Collisions.cpp" />
     <ClCompile Include="Engine\Physics\PhysicsScene.cpp" />
-    <ClCompile Include="Engine\Physics\Transform.cpp" />
-    <ClCompile Include="Engine\Timer.cpp" />
-    <ClCompile Include="Testing\TestGame.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Testing\Shaders\TempShader.frag" />
-    <None Include="Testing\Shaders\TempShader.vert" />
+    <ClInclude Include="Engine\Common.hpp" />
+    <ClInclude Include="Engine\Core\Debug.hpp" />
+    <ClInclude Include="Engine\Core\Timer.hpp" />
+    <ClInclude Include="Engine\Core\Window.hpp" />
+    <ClInclude Include="Engine\Math\Vector2.hpp" />
+    <ClInclude Include="Engine\Physics\Body.hpp" />
+    <ClInclude Include="Engine\Physics\Bounds.hpp" />
+    <ClInclude Include="Engine\Physics\Circle.hpp" />
+    <ClInclude Include="Engine\Physics\Collisions.hpp" />
+    <ClInclude Include="Engine\Physics\PhysicsScene.hpp" />
+    <ClInclude Include="Engine\Physics\Shape.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
