Added fixed update loop, mathf class, bouncy objects, started line collider

--- a/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj
+++ b/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj
@@ -130,12 +130,12 @@
     <ClCompile Include="Engine\Core\Debug.cpp" />
     <ClCompile Include="Engine\Core\Timer.cpp" />
     <ClCompile Include="Engine\Core\Window.cpp" />
+    <ClCompile Include="Engine\Math\Mathf.cpp" />
     <ClCompile Include="Engine\Math\Point.cpp" />
     <ClCompile Include="Engine\Math\Vector2.cpp" />
-    <ClCompile Include="Engine\Physics\Body.cpp" />
-    <ClCompile Include="Engine\Physics\Bounds.cpp" />
-    <ClCompile Include="Engine\Physics\Circle.cpp" />
+    <ClCompile Include="Engine\Physics\CollisionShapes\Circle.cpp" />
     <ClCompile Include="Engine\Physics\Collisions.cpp" />
+    <ClCompile Include="Engine\Physics\CollisionShapes\Line.cpp" />
     <ClCompile Include="Engine\Physics\PhysicsScene.cpp" />
     <ClCompile Include="Engine\Rendering\Shader.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -146,14 +146,18 @@
     <ClInclude Include="Engine\Core\Debug.hpp" />
     <ClInclude Include="Engine\Core\Timer.hpp" />
     <ClInclude Include="Engine\Core\Window.hpp" />
+    <ClInclude Include="Engine\Math\Mathf.hpp" />
     <ClInclude Include="Engine\Math\Point.hpp" />
     <ClInclude Include="Engine\Math\Vector2.hpp" />
-    <ClInclude Include="Engine\Physics\Body.hpp" />
+    <ClInclude Include="Engine\Physics\Bodies\Body.hpp" />
+    <ClInclude Include="Engine\Physics\Bodies\Rigidbody.hpp" />
+    <ClInclude Include="Engine\Physics\Bodies\Staticbody.hpp" />
     <ClInclude Include="Engine\Physics\Bounds.hpp" />
-    <ClInclude Include="Engine\Physics\Circle.hpp" />
+    <ClInclude Include="Engine\Physics\CollisionShapes\Circle.hpp" />
     <ClInclude Include="Engine\Physics\Collisions.hpp" />
+    <ClInclude Include="Engine\Physics\CollisionShapes\Line.hpp" />
     <ClInclude Include="Engine\Physics\PhysicsScene.hpp" />
-    <ClInclude Include="Engine\Physics\Shape.hpp" />
+    <ClInclude Include="Engine\Physics\CollisionShapes\Shape.hpp" />
     <ClInclude Include="Engine\Rendering\Shader.hpp" />
     <ClInclude Include="Engine\Rendering\Texture2D.hpp" />
   </ItemGroup>
