--- a/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj.filters
+++ b/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Engine\Math\FMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Math\VMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Core\Debug.hpp">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Math\FMath.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Math\VMath.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
