--- a/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj.filters
+++ b/CollisionEngine/CollisionEngine/CollisionEngine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Engine\Math\VMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Rendering\Color.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Core\Debug.hpp">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Math\VMath.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Rendering\Color.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
