--- a/PhysicsEngine/PhysicsEngine.vcxproj
+++ b/PhysicsEngine/PhysicsEngine.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="Engine\Math\FloatVector.hpp" />
     <ClInclude Include="Engine\Physics\Bodies.hpp" />
     <ClInclude Include="Engine\Physics\Bodies2D.hpp" />
+    <ClInclude Include="Engine\Physics\Collisions2D.hpp" />
     <ClInclude Include="Engine\Physics\PhysicsScene.hpp" />
     <ClInclude Include="Engine\Physics\PhysicsScene2D.hpp" />
     <ClInclude Include="Engine\Physics\Shapes.hpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="Engine\Math\AABB.cpp" />
     <ClCompile Include="Engine\Math\FloatVector.cpp" />
     <ClCompile Include="Engine\Physics\Bodies2D.cpp" />
+    <ClCompile Include="Engine\Physics\Collisions2D.cpp" />
     <ClCompile Include="Engine\Physics\PhysicsScene.cpp" />
     <ClCompile Include="Engine\Physics\PhysicsScene2D.cpp" />
     <ClCompile Include="Engine\Physics\Shapes.cpp" />
