--- a/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Engine\Physics\PhysicsScene2D.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Physics\Collisions2D.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Math\AABB.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Physics\PhysicsScene2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Physics\Collisions2D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
